# ailyzer

./: .env  .gitignore  requirements.txt
ailyzer_for_git/candidate/: .gitignore
ailyzer_for_git/candidate/backend/: main.py  requirements.txt
ailyzer_for_git/candidate/frontend/: index.html  package-lock.json  package.json
ailyzer_for_git/employer/backend/app/: main.py  pyproject.toml
ailyzer_for_git/employer/backend/app/api/routers/: role.py  user.py  vacancy.py
ailyzer_for_git/employer/backend/app/api/routers/demo_auth/: healper.py  views.py
ailyzer_for_git/employer/backend/app/certs/: jwt-private.pem  jwt-public.pem
ailyzer_for_git/employer/backend/app/core/: config.py
ailyzer_for_git/employer/backend/app/schemas/: role.py  user.py
ailyzer_for_git/employer/backend/app/scripts/: create_initial_data.py
ailyzer_for_git/employer/frontend/: README.md  index.html  package.json
candidate/backend/: into_text.py  main.py  resume_check.py
candidate/backend/core/: config.py  utils.py
candidate/backend/routes/: application_routes.py  candidate_routes.py  candidates.py  interview.py  resume.py  vacancy_routes.py
candidate/backend/schemas/: candidate.py  interview.py
candidate/backend/uploads/: docx
candidate/frontend/: index.html  package-lock.json  vite.config.js
employer/frontend/: .gitignore  index.html  package-lock.json  package.json
shared/core/: config.py
shared/db/: __init__.py  base.py  models.py  session.py
shared/storage/: minio_client.py
uploads/resumes/: 3_top_programmer.docx  app_5_ТЗ .docx  app_9_Баранов М. Н. Треугольники.docx
(+68 files in other folders)
